Mise à jour du schéma de profil utilisateur pour inclure un champ de site web. Changement du port du serveur de 4000 à 3000 et ajout des variables d'environnement pour MongoDB dans le fichier docker-compose.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   express:
     build: .
     ports:
-      - "4000:3000"
+      - "3000:3000"
     depends_on:
       - mongo
     environment:
@@ -14,3 +14,6 @@ services:
     container_name: mongo_container
     ports:
       - "27017:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
